Added WeightEntry and CaloriesEntry classes